--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hello world!
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-container__widget"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/economic-calendar/" rel="noopener" target="_blank"><span class="blue-text">Economic calendar</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-events.js" async>
+  {
+  "colorTheme": "dark",
+  "isTransparent": false,
+  "width": "510",
+  "height": "500",
+  "locale": "en",
+  "importanceFilter": "0,1",
+  "currencyFilter": "USD,EUR,GBP"
+}
+  </script>
+</div>
+<!-- TradingView Widget END -->
